# Ai-Real-estate-agent

./: .env.example  .gitignore  DEVELOPER_GUIDE.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1135d9c8dd52_replace_is_admin_with_role.py  5bb0af5956c4_add_users_table.py  a2b3c4d5e6f7_add_bedrooms_to_leads.py  e8ca4fcd7ef8_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  retriever.py
backend/app/api/: middleware.py
backend/app/core/: config.py  exceptions.py  logging.py  redis.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/dependencies/: __init__.py  auth.py  database.py  roles.py  tenant.py
backend/app/domain/: __init__.py  entities.py  exceptions.py  negotiation.py  state_machine.py
backend/app/models/: __init__.py  conversation.py  lead.py  prompt_version.py  property.py  tenant.py  user.py
backend/app/repositories/: __init__.py  base.py  conversation_repository.py  lead_repository.py  property_repository.py  tenant_repository.py  user_repository.py
backend/app/schemas/: __init__.py  admin.py  auth.py  chat.py  lead.py  property.py  tenant.py
backend/app/services/: __init__.py  auth_service.py  chat_service.py  email_service.py  lead_management_service.py  lead_service.py  (+6 more)
backend/scripts/: seed_db.py
backend/tests/: conftest.py  test_admin_leads.py  test_admin_properties.py  test_admin_users.py  test_ai.py  test_ai_orchestrator.py  test_auth.py  test_chat_integration.py
(+97 files in other folders)
